fixed image width to prevent cards foverflowing out of container

--- a/portfolio.css
+++ b/portfolio.css
@@ -107,11 +107,12 @@ img.icon{
   border-style: solid;
   border-width: 1;
   border-color: black;
-  height: 400px;
+  height: 475px;
 }
 
 img.cardImg {
   height: 60%;
+  max-width: 100%;
   border-radius: 15px;
 }
 
@@ -133,6 +134,10 @@ img.cardImg {
   flex-grow: 1;
   border-width: 1px;
   border-radius: 15px;
+}
+
+.cardAction:hover{
+  cursor: pointer;
 }
 
 .footerInfo {
